workloads/wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  labels:
    app: wg-easy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:14
          ports:
            - containerPort: 51820
              name: wg
              protocol: UDP
            - containerPort: 51821
              name: http
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-easy-config
