workloads/wg-easy/service-vpn.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy-vpn
  labels:
    app: wg-easy
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.4.242"
spec:
  type: LoadBalancer
  selector:
    app: wg-easy
  ports:
    - port: 51820
      targetPort: wg
      protocol: UDP
      name: wg
